# advent-of-code-2020

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: codeql-analysis.yml
aoc/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
aoc_2020/: day2.py  day4.py
doc/: day1.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day2.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
